--- a/Respuestas_libraries_blank.ipynb
+++ b/Respuestas_libraries_blank.ipynb
@@ -4096,7 +4096,7 @@
     "*Valor añadido: Podría ayudar a analizar si los vehículos más pesados tienen mayores emisiones de CO2, lo cual es relevante para estudios sobre sostenibilidad y regulación ambiental.*\n",
     "\n",
     "\n",
-    "### 4. Utilize por lo menos dos análisis del curso de estadistica y/o de visualización de datos  para este problema.\n",
+    "### 4. Utilice por lo menos dos análisis del curso de estadistica y/o de visualización de datos  para este problema.\n",
     "\n",
     "*RTA1: Función de Distribución Acumulada (CDF)*\n",
     "La CDF calcula la probabilidad de que una variable aleatoria tome un valor menor o igual a un determinado punto. Para este problema, se puede calcular la CDF para variables como el peso o potencia, donde,  al graficarla podiamos ver de manera clara cómo se acumulan los valores a medida que aumentan (es decir, qué tan rápido se acumula el porcentaje de autos con un peso o potencia menor a cierto valor). Esto ayudaria a entender la distribución de las características y puede ser útil para tomar decisiones, como segmentar autos según su peso o potencia.\n",
